# image-describer

./: AGENTS.md  README.md  pyproject.toml
src/describe/: backends.py  cli.py  store.py
src/image_describer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
