[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-describer"
version = "0.1.0"
description = "CLI to describe images with llava-llama3"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31",
  "piexif>=1.1.3",
]

[project.scripts]
describe = "describe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
